# icecream-causal

./: .gitignore  ANALYSIS_PLAN.md  PROJECT_ANALYSIS.md  README.md  config.yaml  main.py  project_score.md  pyproject.toml  requirements.txt
data/processed/: ice_cream_test.csv  ice_cream_train.csv
notebooks/: 01-EDA.ipynb  02 HTE modelling.ipynb  02-Causal-DAG.ipynb
src/: load_and_process_data.py  mlflow_utils.py  model_training.py  utils.py
tests/: test_load_and_process_data.py
