[project]
name = "icecream-causal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.4",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argcomplete==3.6.2",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "databricks-sdk==0.61.0",
    "debugpy==1.8.2",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "docker==7.1.0",
    "econml==0.16.0",
    "executing==2.0.1",
    "fastapi==0.116.1",
    "fastjsonschema==2.20.0",
    "filelock==3.16.1",
    "flask==3.1.1",
    "fonttools==4.58.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.40.3",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython==8.26.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.1",
    "jinja2==3.1.6",
    "joblib==1.5.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.2",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "lightgbm==4.6.0",
    "llvmlite==0.44.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mlflow==3.1.4",
    "mlflow-skinny==3.1.4",
    "mysql-connector-python==9.0.0",
    "narwhals==1.47.1",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nltk==3.9.1",
    "numba==0.61.2",
    "numpy==2.2.5",
    "opentelemetry-api==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pillow==11.2.1",
    "pipx==1.7.1",
    "platformdirs==4.2.2",
    "plotly==5.24.1",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.47",
    "protobuf==6.31.1",
    "psutil==6.0.0",
    "pure-eval==0.2.2",
    "pyarrow==17.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pyparsing==3.2.3",
    "pyprind==2.11.3",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==306",
    "pyyaml==6.0.1",
    "pyzmq==26.0.3",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rpds-py==0.20.0",
    "rsa==4.9.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "shap==0.48.0",
    "six==1.17.0",
    "slicer==0.0.8",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sparse==0.17.0",
    "sqlalchemy==2.0.42",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.47.2",
    "statsmodels==0.14.5",
    "streamlit==1.47.0",
    "tenacity==9.0.0",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tornado==6.4.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "userpath==1.9.2",
    "uvicorn==0.35.0",
    "virtualenv==20.27.1",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "zipp==3.23.0",
]
